@@ -1,6 +1,7 @@
 4.0.3
 -----
 1. Fix restating LMS from 'Server settings' page.
+2. Improve/fix album style queue for radio streams.
 
 4.0.2
 -----
